git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@143 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -31,18 +31,20 @@ uploads not supported.
 * limiting subadmins to a given org
 * auto subscribe too auto
 * display link hint on edit bug page
+* document the WhErE hack 
+* send, don't send private comments?
+
+* required fields, required custom datetime field
 
 -----------------------------------------------------------------------
 Version 2.8.5  4/8/2008
 -----------------------------------------------------------------------
 
-* send, don't send private comments?
-
 * dashboard - can another person edit yours?
 
-* timezone
+* [ 1935727 ] InvalidCastException drawing line chart
 
-OffsetFromDbTimesInHours
+* Added status column to relationships.aspx
 
 -----------------------------------------------------------------------
 Version 2.8.4  4/8/2008
