git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@146 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -65,6 +65,9 @@ Enhancements:
 
 * Added status column to relationships.aspx
 
+* Popups that display when you hover over items in the bug list now
+show all comments, not just the first.
+
 
 -----------------------------------------------------------------------
 Version 2.8.4  4/8/2008
