git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@150 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -69,8 +69,7 @@ Enhancements:
 show all comments, not just the first.  Also, popups show after
 hovering 250 milliseconds, instead of after 400 milliseconds.
 
-* Slightly better handling of custom dates fields and custom integer
-fields in search.
+* Custom date fields - you can search them using a date range.
 
 -----------------------------------------------------------------------
 Version 2.8.4  4/8/2008
