git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@159 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -70,6 +70,8 @@ http://sourceforge.net/forum/forum.php?thread_id=2047054&forum_id=226938
 this thread:
 http://sourceforge.net/forum/forum.php?thread_id=2047968&forum_id=226938
 
+* Fixed SQL error with the "bugs with attachments" query that installs
+with setup.sql.
 
 This release also includes some experimental code that allows you to
 tag bugs and the filter your bug lists using the tags.   To try out the
