git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@161 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -49,6 +49,12 @@ uploads not supported.
 
 
 -----------------------------------------------------------------------
+Version 2.8.8 7/?/2008
+-----------------------------------------------------------------------
+
+* Fixed how the red/green flags look in FireFox 3.
+
+-----------------------------------------------------------------------
 Version 2.8.7  6/19/2008
 -----------------------------------------------------------------------
 
