git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@184 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -29,9 +29,19 @@ User level stuff
 * auto subscribe if you modified bug
 * default value for internal comments
 
+* improve documentation of hints
+
 
 1) Record Email CC
 
+
+-----------------------------------------------------------------------
+Version 2.9.3   10/xx/2008 
+-----------------------------------------------------------------------
+
+* Add missing file, "seen.aspx"
+
+* Windows user auto registration
 
 -----------------------------------------------------------------------
 Version 2.9.2   9/26/2008 
